--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+        <link rel="shortcut icon" href="/static/favicon.ico">
+        <link rel="shortcut icon" type="image/png"
+              href="/static/favicon.png" />
         <title>
         {% block title %}
             ASCIIMAGE
