--- a/templates/ascii-image.html
+++ b/templates/ascii-image.html
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-md-8 col-md-offset-2 text-center">
             <div class="page-header">
-                <h1>ASCIIMAGE</h1>
+                <h1>ASCII-Image</h1>
                 <a href="{{ url_for('upload') }}" class="btn btn-primary">
                     Upload another one!
                 </a>
