--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
               href="/static/favicon.png" />
         <title>
         {% block title %}
-            ASCIIMAGE
+            ASCII-Image
         {% endblock %}
         </title>
         <link rel="stylesheet"
