--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="jumbotron text-center">
-        <h1>ASCIIMAGE!</h1>
+        <h1>ASCII-Image!</h1>
         <a href="{{ url_for('upload') }}" class="btn btn-primary">
             Upload your image now!
         </a>
