Limit file size to 4Mb and update template

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -28,7 +28,8 @@
                     <label for="photo">Image</label>
                     <input type="file" name="photo">
                     <p class="help-block">
-                        Only .jpg and .jpeg images are allowed now.
+                        Only .jpg and .jpeg images are allowed now. <br>
+                        File Size Limit: 4Mb
                     </p>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
