--- a/templates/upload.html
+++ b/templates/upload.html
@@ -28,7 +28,7 @@
                     <label for="photo">Image</label>
                     <input type="file" name="photo">
                     <p class="help-block">
-                        Only .jpg and .jpeg images are allowed now. <br>
+                        Supported file types: jpg, jpeg, gif<br>
                         File Size Limit: 4Mb
                     </p>
                 </div>
