--- a/static/styles.css
+++ b/static/styles.css
@@ -1,4 +1,4 @@
-#ascii {
+pre.ascii {
     white-space: pre-wrap;       /* css-3 */
     white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
     white-space: -pre-wrap;      /* Opera 4-6 */
@@ -9,25 +9,25 @@
 }
 
 @media (max-width: 320px) {
-    #ascii {
+    pre.ascii {
         font-size: 2px;
     }
 }
 
 @media (max-width: 375px) and (min-width: 321px) {
-    #ascii {
+    pre.ascii {
         font-size: 3px;
     }
 }
 
 @media (max-width: 425px) and (min-width: 376px) {
-    #ascii {
+    pre.ascii {
         font-size: 4px;
     }
 }
 
 @media (max-width: 768px) and (min-width: 426px) {
-    #ascii {
+    pre.ascii {
         font-size: 5px;
     }
 }
