Update overall look of the website

--- a/templates/ascii-image.html
+++ b/templates/ascii-image.html
@@ -6,9 +6,9 @@
 {% block content %}
     <div class="row">
         <div class="col-md-8 col-md-offset-2 text-center">
-            <div class="page-header">
+            <div style="margin-bottom:30px;">
                 <h1>ASCII-Image</h1>
-                <a href="{{ url_for('upload') }}" class="btn btn-primary">
+                <a href="{{ url_for('upload') }}" class="btn btn-default">
                     Upload another one!
                 </a>
             </div>
