--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,39 +1,55 @@
 {% extends 'base.html' %}
 
+{% block extra_css %}
+    <link rel="stylesheet" href="/static/cover.css">
+{% endblock %}
+
 {% block title %}
     {{ super() }} | Upload
 {% endblock %}
 
-{% block content %}
-    <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-            <div class="page-header">
-                <h1>Upload Image</h1>
+{% block body %}
+<div class="site-wrapper">
+      <div class="site-wrapper-inner">
+        <div class="cover-container">
+          <div class="inner cover">
+            <h1 class="cover-heading">Upload Image</h1>
+            <div class="lead">
+                <div class="row">
+                    <div class="col-md-6 col-md-offset-3">
+                        {% with messages = get_flashed_messages() %}
+                        {% if messages %}
+                            {% for message in messages%}
+                            <div class="alert alert-default" role="alert">
+                                <p>
+                                    <span class="glyphicon glyphicon-warning-sign"
+                                    aria-hidden="true"></span> {{ message }}
+                                </p>
+                            </div>
+                            {% endfor %}
+                        {% endif %}
+                        {% endwith %}
+                        <form method="POST" action="{{ url_for('save_image') }}"
+                            enctype="multipart/form-data">
+                            <div class="form-group">
+                                <input type="file" name="photo" style="margin-top:25px;margin-bottom:10px;">
+                                <p class="help-block">
+                                    Supported file types: jpg, jpeg, gif<br>
+                                    File Size Limit: 4Mb
+                                </p>
+                            </div>
+                            <button type="submit" class="btn btn-default">Submit</button>
+                        </form>
+                    </div>
+                </div>
             </div>
-            {% with messages = get_flashed_messages() %}
-            {% if messages %}
-                {% for message in messages%}
-                <div class="alert alert-warning" role="alert">
-                    <p>
-                        <span class="glyphicon glyphicon-warning-sign"
-                        aria-hidden="true"></span> {{ message }}
-                    </p>
-                </div>
-                {% endfor %}
-            {% endif %}
-            {% endwith %}
-            <form method="POST" action="{{ url_for('save_image') }}"
-                  enctype="multipart/form-data">
-                <div class="form-group">
-                    <label for="photo">Image</label>
-                    <input type="file" name="photo">
-                    <p class="help-block">
-                        Supported file types: jpg, jpeg, gif<br>
-                        File Size Limit: 4Mb
-                    </p>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
+          </div>
+          <div class="mastfoot">
+            <div class="inner">
+              <p>&copy; <a href="https://github.com/shakib609">Shakib Hossain</a>, 2017.</p>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
 {% endblock %}
